Applied diffs for Tom Ellis' article

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -1,7 +1,17 @@
+@misc{original_article,
+	howpublished = {William Yao: A list of Haskell articles on good design, good testing -- \url{https://williamyaoh.com/posts/2019-11-24-design-and-testing-articles.html}},
+	note = {Accessed: 27.11.2019}
+}
+
+
+
 @misc{type_safety_back_and_forth,
 	howpublished = {Matt Parsons: Type Safety Back and Forth -- \url{https://www.parsonsmatt.org/2017/10/11/type_safety_back_and_forth.html}},
 	note = {Accessed: 27.11.2019}
 }
+
+
+
 
 @misc{keep_your_types_small,
 	howpublished = {Matt Parsons: Keep your types small... -- \url{https://www.parsonsmatt.org/2018/10/02/small_types.html}},
