--- a/matt_parsons.tex
+++ b/matt_parsons.tex
@@ -18,7 +18,7 @@ data NonEmptyText = NonEmptyText Char Text
 \end{quotation}
 
 
-Types are a powerful construct for improving program safety. Haskell has a few notable ways of handling potential failure, the most famous being the venerable \texttt{Maybe} type:
+\noindent Types are a powerful construct for improving program safety. Haskell has a few notable ways of handling potential failure, the most famous being the venerable \texttt{Maybe} type:
 
 \begin{minted}{haskell}
 data Maybe a
