--- a/alexis_king3.tex
+++ b/alexis_king3.tex
@@ -13,7 +13,7 @@
 \end{quotation}
 
 
-\noindent Nearly eight months ago (see chapter \ref{sec:using_types_to_unit_test},
+\noindent Nearly eight months ago (see chapter \ref{sec:using_types_to_unit_test}),
 I wrote a blog post about unit testing effectful Haskell code using a
 library called test-fixture. That library has served us well, but it
 wasn't as easy to use as I would have liked, and it worked better with
