--- a/matt_parsons.tex
+++ b/matt_parsons.tex
@@ -193,7 +193,7 @@ By restricting our past, we gain freedom in the future.
 
 \vspace{\baselineskip}
 
-\noindent In my previous article ``Type Safety Back and Forth'' (\ref{sec:type_safety_back_and_forth}), I discussed two different techniques for bringing type safety to programs that may fail. On the one hand, you can push the responsibility forward. This technique uses types like \texttt{Either} and \texttt{Maybe} to report a problem with the inputs to the function. Here are two example type signatures:
+\noindent In my previous article ``Type Safety Back and Forth'' (see chapter \ref{sec:type_safety_back_and_forth}), I discussed two different techniques for bringing type safety to programs that may fail. On the one hand, you can push the responsibility forward. This technique uses types like \texttt{Either} and \texttt{Maybe} to report a problem with the inputs to the function. Here are two example type signatures:
 
 \begin{minted}{haskell}
 safeDivide
