--- a/oskar_wickstrom.tex
+++ b/oskar_wickstrom.tex
@@ -116,7 +116,7 @@ With a basic understanding of PBT, how we can write testable code, and how to wr
 Thank you Chris Ford, Alejandro Serrano Mena, Tobias Pflug, Hillel Wayne, and Ulrik Sandberg for kindly providing your feedback on my drafts!
 
 
-\chapter{Property-Based Testing in a Screencast Editor, Case Study 1: Timeline Flattening - Oskar Wickstr\"om}
+\chapter{Case Study 1: Timeline Flattening - Oskar Wickstr\"om}
 \label{sec:timeline_flattening}
 
 \vspace{\baselineskip}
@@ -528,7 +528,7 @@ Next up is property tests for the video classifier. It's also implemented a pure
 
 
 
-\chapter{Property-Based Testing in a Screencast Editor, Case Study 2: Video Scene Classification - Oskar Wickstr\"om}
+\chapter{Case Study 2: Video Scene Classification - Oskar Wickstr\"om}
 \label{sec:video_scene_classification}
 
 \vspace{\baselineskip}
@@ -813,7 +813,7 @@ The final post in this series will cover testing at a higher level of the system
 
 
 
-\chapter{Property-Based Testing in a Screencast Editor, Case Study 3: Integration Testing - Oskar Wickstr\"om}
+\chapter{Case Study 3: Integration Testing - Oskar Wickstr\"om}
 \label{sec:integration_testing}
 
 \vspace{\baselineskip}
