--- a/tom_ellis.tex
+++ b/tom_ellis.tex
@@ -454,7 +454,7 @@ If the argument \texttt{n} were not used at all then our job would be much easie
 
 Where is it used? We can see that each branch of the \texttt{case} statement returns a list of tuples where the second element of each tuple is $n-1$. Put another way, each branch produces a list and then maps the ``pair with $n-1$'' function over it.
 
-I'll write the ``pair with n-1'' function as verb|(, n-1)| (using the \texttt{TupleSections} extension). The usual alternative would be to write \texttt{\\x -> (x, n-1)} but in this article I want to keep things compact.
+I'll write the ``pair with n-1'' function as \verb|(, n-1)| (using the \texttt{TupleSections} extension). The usual alternative would be to write \texttt{\\x -> (x, n-1)} but in this article I want to keep things compact.
 
 \begin{figure}[htbp]
  \centering
