Fixed typo in Jaspers name

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -350,7 +350,7 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 \large Alexis King
 
-\large Japer Van der Jeugt
+\large Jasper Van der Jeugt
 
 \large Tom Ellis
 
