--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -420,7 +420,7 @@ The homepage for this document is:
 
 William Yao created a link collection (\href{https://williamyaoh.com/posts/2019-11-24-design-and-testing-articles.html}{see here} and here \cite{original_article}) of Haskell articles about design and testing. I did like this collection very much but wanted to have all of them in one document, with one formatting. So the idea of this document (which is now more like a book) was born. 
 
-I included Williams original comments to the articles at the beginning of each chapter. The articles itself were included as unchanged as possible. Sometimes the formatting needed to change, sometimes they referenced each other, sometimes \LaTeX{} needed to be convinced to apply a certain formatting. Anyway, now it is done, so I wish all of you readers a lot of fun reading this document while hopefully learning something new.
+I included Williams original comments to the articles at the beginning of each chapter. The articles themselves were included as unchanged as possible. Sometimes the formatting needed to change, sometimes they referenced each other, sometimes \LaTeX{} needed to be convinced to apply a certain formatting. Anyway, now it is done, so I wish all of you readers a lot of fun reading this document while hopefully learning something new.
 
 \vspace{\baselineskip}
 \noindent \textit{Michael Oswald}
