Added two new articles from Jasper and Michael

--- a/HaskellArticles.bib
+++ b/HaskellArticles.bib
@@ -121,3 +121,12 @@
 @misc{unit_testing_monad_mock,
 	howpublished = {Alexis King: Unit testing effectful Haskell with monad-mock -- \url{https://lexi-lambda.github.io/blog/2017/06/29/unit-testing-effectful-haskell-with-monad-mock/}},
 	note = {Accessed: 27.11.2019}
+
+@misc{the_handle_pattern,
+	howpublished = {Jasper van der Jeugt: The Handle Pattern -- \url{https://jaspervdj.be/posts/2018-03-08-handle-pattern.html}},
+	note = {Accessed: 11.12.2019}
+
+	
+@misc{readert_pattern,
+	howpublished = {Michael Snoyman: The ReaderT Design Pattern -- \url{https://www.fpcomplete.com/blog/2017/06/readert-design-pattern}},
+	note = {Accessed: 11.12.2019}
