--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -464,12 +464,19 @@ Found this useful? Still have questions? Talk to me!
 
 \input{sandy_maguire.tex}
 
+\input{jasper_van_der_jeugt3.tex}
+
+\input{michael_snoyman2.tex}
+
+
+
+
 
 
 \part{Posts on testing}
 
 
-\input {jasper_van_der_jeugt2.tex}
+\input{jasper_van_der_jeugt2.tex}
 
 \input{oskar_wickstrom.tex}
 
