--- a/jasper_van_der_jeugt.tex
+++ b/jasper_van_der_jeugt.tex
@@ -1,4 +1,5 @@
 \chapter{On Ad-hoc Datatypes - Jasper Van der Jeugt}
+\label{sec:adhoc_datatypes}
 
 \begin{quotation}
 \noindent\textit{\textbf{William Yao:}}
