Added version information on title

--- a/HaskellArticles.tex
+++ b/HaskellArticles.tex
@@ -338,6 +338,8 @@ bibtotoc,						% Literaturverzeichnis im Inhalt
 
 \Huge\textsc{\textit{A List of Haskell Articles on good design, good testing}}
 
+\large{}V\input{git_tag.tex}
+
 \rule{\textwidth}{4pt}
 
 % \Large \amrint
